Resolved merge conflicts

--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
 
                 <!-- Register Option -->
                 <p class="register-text">
-                    Don't have an account? <a href="#">Register Now</a>
+                    Don't have an account? <a href="register.html">Register Now</a>
                 </p>
             </div>
         </div>
