--- a/app-information.html
+++ b/app-information.html
@@ -1,10 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>App Information</title>
+    <style>
+        /* General Body Styling */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #4C57A7; /* Purple Background */
+        }
+
+        /* Container */
+        .container {
+            margin: 100px auto;
+            padding: 20px;
+            max-width: 1200px;
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+        }
+
+        /* Info Section */
+        .info-section {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 40px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease; /* Add transition */
+        }
+
+        .info-section:hover {
+            transform: scale(1.05); /* Slightly increase size on hover */
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
+        }
+        .combined-box:hover {
+            transform: scale(1.05); /* Slightly increase size on hover */
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Increase shadow on hover */
+            transition: transform 0.3s ease, box-shadow 0.3s ease; /* Add smooth transition */
+        }
+
+        .info-section.reverse {
+            flex-direction: row-reverse;
+        }
+
+        /* Text Box */
+        .text-box {
+            flex: 1;
+            color: #4C57A7;
+            font-size: 18px;
+        }
+
+        .text-box h2 {
+            font-size: 28px;
+            margin-bottom: 15px;
+            color: #4C57A7;
+        }
+
+        .text-box p, .text-box ul {
+            line-height: 1.8;
+        }
+
+        /* Combined White Box */
+        .combined-box {
+            background-color: white;
+            border-radius: 10px;
+            padding: 40px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Blue Box Inside the Combined White Box */
+        .blue-box {
+            background-color: #2E4A7D; /* Darker Blue */
+            color: white;
+            border-radius: 10px;
+            padding: 80px;
+            padding-bottom: px;
+            margin: 40px 0px; /* Space around the blue box */
+
+             /* Box width */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            font-size: 18px;
+            line-height: 1.9;
+            overflow: hidden; /* Ensure smooth expansion */
+            word-wrap: break-word; /* Allow long words to break */
+
+        }
+        .blue-box h2 {
+            font-size: 24px;
+            margin-bottom: 15px;
+
+        .blue-box h3 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+
+        .blue-box ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .blue-box ul li {
+            margin: 10px 0;
+        }
+
+        /* Connections Section */
+        .connections-section {
+            margin-top: 60px;
+             /* Larger gap before Connections heading */
+        }
+
+        .connections-section h2 {
+            margin-bottom: 20px;
+        }
+
+        .connection-graphic {
+            display:flex;
+            justify-content:center
+            align-items:center
+            text-align: center;
+            margin: 0px auto;
+        }
+
+        .connection-graphic img {
+            max-width: 100%;
+            height: auto;
+            display:block;
+        }
+    </style>
 </head>
 <body>
-$END$
+    <div class="container">
+        <!-- Section 1 -->
+        <div class="info-section">
+            <div class="text-box">
+                <h2>Sleep Med</h2>
+                <p> A real-time monitoring app powered by a chest sensor for accurate health and sleep insights.</p>
+            </div>
+            <div class="image-box">
+                <img src="../../images/pic2.jpg" alt="Doctors resting">
+            </div>
+        </div>
+
+        <!-- Section 2 -->
+        <div class="info-section reverse">
+            <div class="text-box">
+                <h2>Night Shift Workers</h2>
+                 <p> Tailored specifically for night shift healthcare workers to monitor and improve sleep quality and health.</p>
+            </div>
+            <div class="image-box">
+                <img src="../../images/pic3.jpg" alt="Key features">
+            </div>
+        </div>
+
+        <!-- Section 3 -->
+        <div class="info-section">
+            <div class="text-box">
+                <h2> Better Care for Patients</h2>
+                <p>Enhancing healthcare providers' performance for improved patient outcomes</p>
+            </div>
+            <div class="image-box">
+                <img src="../../images/pic4.jpg" alt="Getting started">
+            </div>
+        </div>
+
+        <!-- Combined Section -->
+        <div class="combined-box">
+            <h2 style="color: #4C57A7;">Sleep Med</h2>
+            <div class="features-section">
+                <ul class="feature-list" style="list-style: none; padding: 0; margin: 20px 0;">
+                    <li style="display: flex; align-items: center; margin-bottom: 15px;">
+                        <div style="width: 10px; height: 10px; background-color: #4C57A7; border-radius: 50%; margin-right: 10px;"></div>
+                        <span style="color: #4C57A7;">Real-Time Health Monitoring</span>
+                    </li>
+                    <li style="display: flex; align-items: center; margin-bottom: 15px;">
+                        <div style="width: 10px; height: 10px; background-color: #4C57A7; border-radius: 50%; margin-right: 10px;"></div>
+                        <span style="color: #4C57A7;">Weekly and Monthly Reports</span>
+                    </li>
+                    <li style="display: flex; align-items: center; margin-bottom: 15px;">
+                        <div style="width: 10px; height: 10px; background-color: #4C57A7; border-radius: 50%; margin-right: 10px;"></div>
+                        <span style="color: #4C57A7;">Personalized Sleep Insights</span>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Blue Box -->
+            <div class="blue-box">
+                Healthcare  providers  on  night  shifts  face  significant  challenges,  including disrupted circadian rhythms, high stress levels,
+                and demanding workloads, leading to poor sleep quality, burnout, and compromised patient care.
+                To address these issues, the app utilizes the **BITalino sensor**, which attaches to the healthcare worker's
+                chest to capture real-time **ECG (Electrocardiogram)** data.
+                this data offers insights into heart rate variability, stress levels, and sleep patterns.
+                Through the app, users can monitor real-time metrics and access detailed weekly and monthly reports,
+                enabling them to optimize recovery, improve sleep quality, and enhance their performance during night shifts,
+                ultimately benefiting both healthcare providers and their patients.
+            </div>
+
+            <!-- Connections Section -->
+            <div class="connections-section">
+                <h2 style="color: #4C57A7; text-align: center;">Connections</h2>
+                <p style="color: #4C57A7; text-align: center;">MedSleep is connected through sensors to doctors, and then the data can be accessed on phones</p>
+                <div class="connection-graphic" style="display: flex; justify-content: center; align-items: center; margin: 20px auto;">
+                    <img src="../../images/graphic.png" alt="Connections Graphic" style="max-width: 100%; height: auto; display: block;">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
