--- a/settings.html
+++ b/settings.html
@@ -123,7 +123,7 @@
         </div>
     </div>
         <div class="right-box">
-            <img src="images/sleep med.png" alt="Logo" class="logo">
+            <img src="../../images/sleep.png" alt="Logo" class="logo">
 
         </div>
     </div>
