Updating all images in files

--- a/app-information.html
+++ b/app-information.html
@@ -165,7 +165,7 @@
                 <p> Tailored specifically for night shift healthcare workers to monitor and improve sleep quality and health.</p>
             </div>
             <div class="image-box">
-                <img src="../../images/pic3.jpg" alt="Key features">
+                <img src="images/pic3.jpg" alt="Key features">
             </div>
         </div>
 
